--- a/sveltekit/src/app.css
+++ b/sveltekit/src/app.css
@@ -5,7 +5,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
 
 :root {
-  background-color: #f3f4f6;
+  background-color:  #111827;
+  color: #f3f4f6;
   font-family: 'Roboto', sans-serif;
   --scrollbar-width: 4px;
   --scrollbar-thumb: #cbd5e1; /* Default thumb color */
